--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -60,6 +60,7 @@ html, body {
 
 .logo {
     margin: 150px auto;
+    overflow: visible;
 
     &__container {
         text-align: center;
@@ -92,19 +93,33 @@ html, body {
     }
 
     &__heading {
-        @include make-lg-column-push(6);
+        @include make-lg-column-push(12);
         @include make-lg-column(6);
         @include heading();
+
+        transition: all 500ms cubic-bezier(0.4, 0, 1, 1);
+
+        &.scrolled {
+            @include make-lg-column-push(6);
+        }
     }
 
     &__textbox {
-        @include make-lg-column-push(5);
+        //@include make-lg-column-push(12);
         @include make-lg-column(7);
+        @include make-lg-column-pull(7);
 
         border-radius: 40px;
         background-color: rgba(47, 18, 7, 0.7);
         margin: 250px 0 0;
         padding: 30px;
+
+        transition: all 500ms cubic-bezier(0.4, 0, 1, 1);
+
+
+        &.scrolled {
+            @include make-lg-column-pull(-5);
+        }
 
     }
 
@@ -160,7 +175,7 @@ html, body {
 
     }
 
-    &__row {
+    /*&__row {
         @include make-row();
 
         display: flex;
@@ -171,19 +186,34 @@ html, body {
 
         &:nth-child(even){
             flex-direction: row-reverse;
+
+            & .gallery {
+                @include make-lg-column-pull(4);
+
+                &.scrolled {
+                    @include make-lg-column-pull(0);
+                }
+            }
+
+            & .gallery__name {
+                @include make-lg-column-push(8);
+
+                &.scrolled {
+                    @include make-lg-column-push(0);
+                }
+            }
         }
-    }
+    }*/
 }
 
 .gallery {
     @include make-lg-column(8);
 
-    //border: 5px solid #B80078;
-    //border-radius: 40px 10px 40px 10px;
     padding: 0 30px 20px;
     max-height: 230px;
     overflow: hidden;
-    //margin: 50px 0;
+
+    transition: all 1000ms cubic-bezier(0.4, 0, 1, 1);
 
     &__image {
         @include make-lg-column(3);
@@ -205,10 +235,94 @@ html, body {
         background: linear-gradient(to bottom, #78004E, #FF00A7);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
+
+        transition: all 500ms cubic-bezier(0.4, 0, 1, 1);
+
+        &--tufts {
+            @include make-lg-column-push(4);
+
+            &.scrolled {
+                @include make-lg-column-push(0);
+            }
+        }
+
+        //&--curls {
+        //    @include make-lg-column-pull(4);
+        //
+        //    &.scrolled {
+        //        @include make-lg-column-pull(0);
+        //    }
+        //}
+
+        &--braids {
+            @include make-lg-column-push(4);
+
+            &.scrolled {
+                @include make-lg-column-push(0);
+            }
+        }
     }
 
+    &--tufts {
+        @include make-lg-column-pull(8);
+
+        &.scrolled {
+            @include make-lg-column-pull(0);
+        }
+    }
+
+    //&--curls {
+    //    @include make-lg-column-push(8);
+    //
+    //    &.scrolled {
+    //        @include make-lg-column-push(0);
+    //    }
+    //}
+
+    &--braids {
+        @include make-lg-column-pull(8);
+
+        &.scrolled {
+            @include make-lg-column-pull(0);
+        }
+    }
 }
 
+.container {
+    overflow: hidden;
+}
+
+.works-gallery {
+    &__row {
+        @include make-row();
+
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: center;
+        justify-content: space-between;
+
+        &:nth-child(even){
+            flex-direction: row-reverse;
+
+            & .gallery {
+                @include make-lg-column-pull(4);
+
+                &.scrolled {
+                    @include make-lg-column-pull(0);
+                }
+            }
+
+            & .gallery__name {
+                @include make-lg-column-push(8);
+
+                &.scrolled {
+                    @include make-lg-column-push(0);
+                }
+            }
+        }
+    }
+}
 
 // LIGHTBOX
 
