--- a/styles/main.css
+++ b/styles/main.css
@@ -6219,7 +6219,8 @@ html, body {
       border-bottom: 2px solid #fff; }
 
 .logo {
-  margin: 150px auto; }
+  margin: 150px auto;
+  overflow: visible; }
   .logo__container {
     text-align: center; }
   .logo__image {
@@ -6252,14 +6253,18 @@ html, body {
     margin: 50px auto;
     background: linear-gradient(to bottom, #FF00A7, #78004E);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; }
+    -webkit-text-fill-color: transparent;
+    transition: all 500ms cubic-bezier(0.4, 0, 1, 1); }
     @media (min-width: 1200px) {
       .about-master__heading {
-        left: 50%; } }
+        left: 100%; } }
     @media (min-width: 1200px) {
       .about-master__heading {
         float: left;
         width: 50%; } }
+    @media (min-width: 1200px) {
+      .about-master__heading.scrolled {
+        left: 50%; } }
   .about-master__textbox {
     position: relative;
     min-height: 1px;
@@ -6268,14 +6273,18 @@ html, body {
     border-radius: 40px;
     background-color: rgba(47, 18, 7, 0.7);
     margin: 250px 0 0;
-    padding: 30px; }
-    @media (min-width: 1200px) {
-      .about-master__textbox {
-        left: 41.6666666667%; } }
+    padding: 30px;
+    transition: all 500ms cubic-bezier(0.4, 0, 1, 1); }
     @media (min-width: 1200px) {
       .about-master__textbox {
         float: left;
         width: 58.3333333333%; } }
+    @media (min-width: 1200px) {
+      .about-master__textbox {
+        right: 58.3333333333%; } }
+    @media (min-width: 1200px) {
+      .about-master__textbox.scrolled {
+        right: -41.6666666667%; } }
   .about-master__text {
     font-family: Merriweather, serif;
     font-size: 24px;
@@ -6301,31 +6310,46 @@ html, body {
       text-decoration: none;
       color: #fff; }
 
-.works-gallery__heading {
-  display: block;
-  color: #6b0b64;
-  font-size: 60px;
-  font-family: Lobster, sans-serif;
-  text-align: center;
-  margin: 50px auto;
-  background: linear-gradient(to bottom, #FF00A7, #78004E);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; }
-.works-gallery__row {
-  margin-left: -15px;
-  margin-right: -15px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: space-between; }
-  .works-gallery__row:before, .works-gallery__row:after {
-    content: " ";
-    display: table; }
-  .works-gallery__row:after {
-    clear: both; }
-  .works-gallery__row:nth-child(even) {
-    flex-direction: row-reverse; }
+.works-gallery {
+    /*&__row {
+        @include make-row();
+
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: center;
+        justify-content: space-between;
+
+        &:nth-child(even){
+            flex-direction: row-reverse;
+
+            & .gallery {
+                @include make-lg-column-pull(4);
+
+                &.scrolled {
+                    @include make-lg-column-pull(0);
+                }
+            }
+
+            & .gallery__name {
+                @include make-lg-column-push(8);
+
+                &.scrolled {
+                    @include make-lg-column-push(0);
+                }
+            }
+        }
+    }*/ }
+  .works-gallery__heading {
+    display: block;
+    color: #6b0b64;
+    font-size: 60px;
+    font-family: Lobster, sans-serif;
+    text-align: center;
+    margin: 50px auto;
+    background: linear-gradient(to bottom, #FF00A7, #78004E);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; }
 
 .gallery {
   position: relative;
@@ -6334,7 +6358,8 @@ html, body {
   padding-right: 15px;
   padding: 0 30px 20px;
   max-height: 230px;
-  overflow: hidden; }
+  overflow: hidden;
+  transition: all 1000ms cubic-bezier(0.4, 0, 1, 1); }
   @media (min-width: 1200px) {
     .gallery {
       float: left;
@@ -6366,11 +6391,67 @@ html, body {
     margin: 10px auto;
     background: linear-gradient(to bottom, #78004E, #FF00A7);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; }
+    -webkit-text-fill-color: transparent;
+    transition: all 500ms cubic-bezier(0.4, 0, 1, 1); }
     @media (min-width: 1200px) {
       .gallery__name {
         float: left;
         width: 33.3333333333%; } }
+    @media (min-width: 1200px) {
+      .gallery__name--tufts {
+        left: 33.3333333333%; } }
+    @media (min-width: 1200px) {
+      .gallery__name--tufts.scrolled {
+        left: 0%; } }
+    @media (min-width: 1200px) {
+      .gallery__name--braids {
+        left: 33.3333333333%; } }
+    @media (min-width: 1200px) {
+      .gallery__name--braids.scrolled {
+        left: 0%; } }
+  @media (min-width: 1200px) {
+    .gallery--tufts {
+      right: 66.6666666667%; } }
+  @media (min-width: 1200px) {
+    .gallery--tufts.scrolled {
+      right: 0%; } }
+  @media (min-width: 1200px) {
+    .gallery--braids {
+      right: 66.6666666667%; } }
+  @media (min-width: 1200px) {
+    .gallery--braids.scrolled {
+      right: 0%; } }
+
+.container {
+  overflow: hidden; }
+
+.works-gallery__row {
+  margin-left: -15px;
+  margin-right: -15px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-between; }
+  .works-gallery__row:before, .works-gallery__row:after {
+    content: " ";
+    display: table; }
+  .works-gallery__row:after {
+    clear: both; }
+  .works-gallery__row:nth-child(even) {
+    flex-direction: row-reverse; }
+    @media (min-width: 1200px) {
+      .works-gallery__row:nth-child(even) .gallery {
+        right: 33.3333333333%; } }
+    @media (min-width: 1200px) {
+      .works-gallery__row:nth-child(even) .gallery.scrolled {
+        right: 0%; } }
+    @media (min-width: 1200px) {
+      .works-gallery__row:nth-child(even) .gallery__name {
+        left: 66.6666666667%; } }
+    @media (min-width: 1200px) {
+      .works-gallery__row:nth-child(even) .gallery__name.scrolled {
+        left: 0%; } }
 
 /* Footer
 -----------------------------------------------------------------------------*/
