--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,4 +1,8 @@
-//Fonts
+// Fonts
 
 $headingFont: ArkonaC, serif;
 $mainFont: Merriweather, serif;
+
+// Colors
+
+$mainBackgroundColor: rgba(255, 0, 167, 0.03);
