--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -18,37 +18,45 @@
     position: relative;
     padding: 0 30px;
 
+    @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+        font-size: 60px;
+        padding: 0 20px;
+    }
+
+    @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+        font-size: 90px;
+    }
+
     &::before {
-        //content: '';
-        //display: block;
-        /*background: url("../images/headings_decor_left.png") transparent no-repeat left center;
-        width: 250px;
-        height: 59px;*/
-        //width: 250px;
-        //height: 59px;
-        //background: url('../images/main_sprite.png') -950px -470px;
         @include pseudo-sprite(250px, 59px, -10px, -511px);
         position: absolute;
         left: 0;
         top: 50%;
         @include translate(-100%, -50%);
+
+        @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+            @include pseudo-sprite(226px, 55px, -10px, -1121px);
+        }
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            display: none;
+        }
     }
 
     &::after {
-        //content: '';
-        //display: block;
-        /*background: url("../images/headings_decor_right.png") transparent no-repeat right center;
-        width: 250px;
-        height: 59px;*/
-        //width: 250px;
-        //height: 59px;
-        //background: url('../images/main_sprite.png') -680px -470px;
         @include pseudo-sprite(250px, 59px, -280px, -511px);
         position: absolute;
         right: 0;
         top: 50%;
-
         @include translate(100%, -50%);
+
+        @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+            @include pseudo-sprite(226px, 55px, -253px, -1121px);
+        }
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            display: none;
+        }
     }
 }
 
@@ -61,28 +69,13 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
-    //position: relative;
-
-    /*&::before {
-        content: '';
-        display: block;
-        background: url("../images/gallery_headings_decore.png") transparent no-repeat center center;
-        width: 100%;
-        height: 31px;
-        position: absolute;
-        top: -100%;
-        @include rotate(180deg);
+    @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+        font-size: 50px;
     }
 
-    &::after {
-        content: '';
-        display: block;
-        background: url("../images/gallery_headings_decore.png") transparent no-repeat center center;
-        width: 100%;
-        height: 31px;
-        position: absolute;
-        bottom: -100%;
-    }*/
+    @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+        font-size: 70px;
+    }
 }
 
 @mixin heading4() {
@@ -113,6 +106,13 @@
         height: 32px;
         border-radius: 5px;
         background: url("../images/main_sprite.png") $x $y;
+
+        @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+            left: -34px;
+            top: -2px;
+            width: 30px;
+            height: 30px;
+        }
     }
 }
 
@@ -125,5 +125,21 @@
         width: 24px;
         height: 24px;
         background: url("../images/main_sprite.png") $x $y;
+
+        @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+            width: 22px;
+            height: 22px;
+        }
+    }
+}
+
+@mixin contacts-font () {
+    font-family: $mainFont;
+    font-size: 20px;
+    color: #6b0b64;
+    font-weight: 700;
+
+    @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+        font-size: 18px;
     }
 }
