--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -24,7 +24,7 @@
     }
 
     @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
-        font-size: 90px;
+        font-size: 80px;
     }
 
     &::before {
@@ -74,7 +74,7 @@
     }
 
     @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
-        font-size: 70px;
+        font-size: 60px;
     }
 }
 
@@ -130,6 +130,11 @@
             width: 22px;
             height: 22px;
         }
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            left: 30%;
+            top: 4px;
+        }
     }
 }
 
@@ -141,5 +146,9 @@
 
     @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
         font-size: 18px;
+    }
+
+    @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+        font-size: 23px;
     }
 }
