--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -269,6 +269,23 @@
 
 .works-gallery {
     background-color: $mainBackgroundColor;
+    /*position: relative;
+
+    @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+        padding-bottom: 100px;
+
+        &::after {
+            content: '';
+            display: block;
+            background: url("../images/separator.png") no-repeat center;
+            width: 600px;
+            height: 67px;
+            position: absolute;
+            bottom: 17px;
+            left: 50%;
+            @include translate(-50%, 0);
+        }
+    }*/
 
     &__heading-box {
         @include make-md-column(12);
@@ -352,8 +369,16 @@
                 margin-bottom: 10px;
             }
 
+            @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+                margin-bottom: 65px;
+            }
+
             &::after {
                 display: none;
+
+                @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+                    display: block;
+                }
             }
         }
     }
@@ -369,7 +394,7 @@
         }
 
         @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
-            max-height: 460px;
+            max-height: 450px;
         }
 
     }
@@ -408,8 +433,8 @@
     }
 
     &__content {
-        @include make-md-column(10);
-        @include make-md-column-push(1);
+        @include make-sm-column(10);
+        @include make-sm-column-push(1);
     }
 
     &__row {
@@ -418,8 +443,26 @@
         flex-wrap: nowrap;
         justify-content: center;
 
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            flex-direction: column-reverse;
+            margin-bottom: 50px;
+            background-color: $mainBackgroundColor;
+            border-radius: 30px;
+        }
+
         &:nth-child(even) {
             flex-direction: row-reverse;
+
+            @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+                flex-direction: column-reverse;
+            }
+        }
+
+        &:last-child {
+
+            @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+                margin-bottom: 0;
+            }
         }
     }
 
@@ -434,6 +477,11 @@
         @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
             font-size: 34px;
         }
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            font-size: 50px;
+            margin-bottom: 0;
+        }
     }
 
     &__text-box {
@@ -445,6 +493,12 @@
 
         @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
             padding: 25px;
+        }
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            background-color: transparent;
+            padding-top: 30px;
+            margin: 0;
         }
     }
 
@@ -459,6 +513,12 @@
         @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
             font-size: 15px;
             line-height: 19.8px;
+        }
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            font-size: 20px;
+            line-height: 28px;
+            letter-spacing: 0.1px;
         }
     }
 
@@ -477,6 +537,13 @@
 
         @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
             margin-top: 25px;
+        }
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            font-size: 34px;
+            width: 200px;
+            height: 60px;
+            margin-top: 45px;
         }
 
         &:focus, &:active {
@@ -519,8 +586,16 @@
     }
 
     &__image-box {
+        @include make-sm-column(8);
+        @include make-sm-column-offset(2);
         @include make-md-column(5);
+        @include make-md-column-offset(0);
         margin-bottom: 50px;
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            margin-top: 30px;
+            margin-bottom: 20px;
+        }
     }
 
     &__image {
@@ -531,6 +606,8 @@
         padding: 10px 0;
     }
 }
+
+//  PopUp Windows
 
 .program {
     display: none;
@@ -545,7 +622,13 @@
         position: relative;
 
         @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
-            padding: 110px 0 70px;
+            padding: 114px 0 70px;
+            font-size: 35px;
+        }
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            padding: 40px 0 40px;
+            font-size: 45px;
         }
 
         &::before {
@@ -558,11 +641,19 @@
             @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
                 @include pseudo-sprite(900px, 207px, -10px, -670px);
             }
+
+            @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+                display: none;
+            }
         }
     }
 
     &__content {
         padding: 40px 100px;
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            padding: 0 100px 30px;
+        }
     }
 
     &__row {
@@ -574,8 +665,16 @@
         justify-content: space-between;
         align-items: center;
 
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            flex-direction: column;
+        }
+
         &:nth-child(even) {
             flex-direction: row-reverse;
+
+            @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+                flex-direction: column;
+            }
         }
     }
 
@@ -586,14 +685,28 @@
         line-height: 23px;
         text-align: justify;
         color: #6b0b64;
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            font-size: 20px;
+            line-height: inherit;
+            margin-bottom: 30px;
+        }
     }
 
     &__lesson-number {
+        display: block;
         font-style: italic;
         font-weight: 700;
         font-size: 20px;
         line-height: 50px;
         text-decoration: underline;
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            text-align: center;
+            margin: 20px 0;
+            line-height: inherit;
+            font-size: 22px;
+        }
     }
 
     &__image-box {
@@ -601,6 +714,13 @@
         max-height: 250px;
         padding-top: 10px;
         overflow: hidden;
+        display: flex;
+        justify-content: space-around;
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            max-height: 365px;
+            width: 100%;
+        }
     }
 
     &__image {
@@ -608,6 +728,10 @@
         -webkit-filter: drop-shadow(0 0 4px #904777);
         filter: drop-shadow(0 0 4px #904777);
         margin-bottom: 20px;
+
+        /*@media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            width: 45%;
+        }*/
     }
 
     &__duration {
@@ -716,6 +840,10 @@
         text-align: justify;
         color: #6b0b64;
 
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            font-size: 20px;
+        }
+
         &:hover {
             color: #ff00a7;
             cursor: pointer;
@@ -726,6 +854,10 @@
         display: none;
         padding-left: 30px;
         text-align: justify;
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            padding-left: 40px;
+        }
     }
 
     &__answer {
@@ -733,6 +865,10 @@
         font-style: italic;
         font-family: $mainFont;
         font-size: 17px;
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            font-size: 20px;
+        }
     }
 
     &__button {
@@ -772,15 +908,22 @@
     }
 
     &__type {
+        @include make-sm-column(3);
+        @include make-sm-column-offset(2);
         @include make-md-column(3);
         @include make-md-column-offset(1);
         text-align: right;
         @include contacts-font();
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            text-align: left;
+        }
     }
 
     &__item {
+        @include make-sm-column(6);
+        @include make-sm-column-push(1);
         @include make-md-column(7);
-        @include make-md-column-push(1);
         @include contacts-font();
         margin-bottom: 25px;
 
@@ -835,7 +978,14 @@
     }
 
     &__map-box {
+        @include make-sm-column(10);
+        @include make-sm-column-offset(1);
         @include make-md-column(4);
+        @include make-md-column-offset(0);
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            margin-top: 30px;
+        }
     }
 }
 
@@ -846,8 +996,8 @@
     background-color: #6b0b64;
 
     &__wrapper {
-        @include make-md-column(10);
-        @include make-md-column-push(1);
+        @include make-sm-column(10);
+        @include make-sm-column-push(1);
     }
 }
 
@@ -855,6 +1005,11 @@
     @include make-md-column(3);
     margin: 20px auto;
     padding-left: 0;
+
+    @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+        text-align: center;
+        margin: 40px auto 0;
+    }
 
     &--courses {
         @include make-md-column(6);
@@ -870,6 +1025,13 @@
 
             @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
                 font-size: 15px;
+            }
+
+            @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+                border: none;
+                margin-bottom: 10px;
+                padding-left: 0;
+                font-size: 22px;
             }
 
             &:hover, &:active {
@@ -901,6 +1063,15 @@
             @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
                 font-size: 15px;
                 padding-left: 30px;
+            }
+
+            @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+                padding-left: 100px;
+                font-size: 22px;
+
+                &:last-child {
+                    margin-bottom: 40px;
+                }
             }
 
             &--phone {
@@ -956,6 +1127,12 @@
         @media all and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
             font-size: 15px;
         }
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            font-size: 25px;
+            padding-bottom: 10px;
+            margin-bottom: 25px;
+        }
     }
 
     &__list {
@@ -965,6 +1142,10 @@
         justify-content: space-between;
         margin: 0;
         box-shadow: inset 2px 0 0 0 rgba(255, 255, 255, 0.5);
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            box-shadow: none;
+        }
     }
 
     &__item {
@@ -972,6 +1153,13 @@
         padding: 0;
         margin-bottom: 4px;
 
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            margin-bottom: 10px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
     }
 
     &__link {
@@ -982,6 +1170,12 @@
         font-family: $mainFont;
         border-left: 2px solid transparent;
         padding-left: 10px;
+
+        @media all and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+            border: none;
+            padding-left: 0;
+            font-size: 22px;
+        }
 
         &:hover, &:active {
             text-decoration: underline;
